# ckanext-related-datasets

./: .gitignore  MANIFEST.in  pyproject.toml
ckanext/related_datasets/: helpers.py  model.py  plugin.py
ckanext/related_datasets/fanstatic/: related-datasets.css  related-datasets.js  webassets.yml
ckanext/related_datasets/logic/: action.py  auth.py  validators.py
ckanext/related_datasets/migration/related_datasets/: alembic.ini  env.py
ckanext/related_datasets/migration/related_datasets/versions/: 001_add_dataset_relationship_custom.py
ckanext/related_datasets/templates/package/: read.html
ckanext/related_datasets/templates/package/snippets/: dataset_card.html  package_basic_fields.html  related_datasets_display.html  related_datasets_form.html
ckanext_related_datasets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
